test/parameterizedSimulation.slq
// args: --run
def main(const x:ğ”¹){} // error
